--- a/lib/nanobox_phoenix/web/templates/layout/app.html.eex
+++ b/lib/nanobox_phoenix/web/templates/layout/app.html.eex
@@ -7,7 +7,7 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <title>Hello NanoBoxPhoenix!</title>
+    <title><%= app_name() %></title>
     <link rel="stylesheet" href="<%= static_path(@conn, "/css/app.css") %>">
   </head>
 
@@ -16,10 +16,10 @@
       <header class="header">
         <nav role="navigation">
           <ul class="nav nav-pills pull-right">
-            <li><a href="http://www.phoenixframework.org/docs">Get Started</a></li>
+            <li><a href="#">Login</a></li>
           </ul>
         </nav>
-        <span class="logo"></span>
+        <h1><%= app_name() %></h1>
       </header>
 
       <p class="alert alert-info" role="alert"><%= get_flash(@conn, :info) %></p>
