--- a/lib/nanobox_phoenix/web/templates/page/index.html.eex
+++ b/lib/nanobox_phoenix/web/templates/page/index.html.eex
@@ -1,9 +1,9 @@
 <div class="row marketing">
-  <div class="col-lg-6">
+  <div class="six columns">
     <h2><%= gettext "Welcome to %{name}!", name: "Phoenix" %></h2>
   </div>
 
-  <div class="col-lg-6">
+  <div class="six columns">
     <div id="root"></div>
   </div>
 </div>
